package org.manage;

class AFrames extends Hotel {
    AFrames(String address) {
        setAddress(address);
        setType("AFrames");
    }
}