@startuml
class org.example.Manage.IndoorSpace {
+ ArrayList<String> getAmenities()
+ int getCost()
}

class org.example.Manage.Cottage {
}
class org.example.Manage.Dining {
+ ArrayList<String> getAmenities()
+ int getCost()
}

class org.example.Manage.Lounge {
+ ArrayList<String> getAmenities()
+ int getCost()
}

class org.example.Manage.DoubleRoom {
+ int getCost()
+ ArrayList<String> getAmenities()
+ String getDescription()
}

class org.example.Manage.Cabin {
}
class org.example.Manage.SingleRoom {
+ int getCost()
+ ArrayList<String> getAmenities()
+ String getDescription()
}

class org.example.Manage.HotelSystem {
+ {static} void main(String[])
}

class org.example.Manage.CheckInandOut {
- String checkin
- int totalCost
- boolean payment
- String[] dateOfCheckIn
- String[] dateOfCheckOut
# int checkinYear
- int[] days
+ String getCheckin()
+ String getCheckout()
+ void setTotalDays()
+ void setPayment(boolean)
+ boolean getPayment()
+ void setTotalCost(int)
+ int getTotalCost()
+ int getTotalDays()
}


class org.example.Manage.Management {
- ArrayList<Area> areaList
+ void addArea()
+ ArrayList<Area> getAreaList()
+ Area getAreabyName(String)
}


interface org.example.Manage.CommonSpace {
+ {abstract}ArrayList<String> getAmenities()
+ {abstract}int getCost()
}

abstract class org.example.Manage.OutdoorDecorator {
- CommonSpace decoOutdoorSpace
+ int getCost()
+ ArrayList<String> getAmenities()
}


abstract class org.example.Manage.IndoorDecorator {
- CommonSpace decoIndoorSpace
+ int getCost()
+ ArrayList<String> getAmenities()
}


class org.example.Manage.AirConditioner {
~ Room room
+ ArrayList<String> getAmenities()
+ int getCost()
}


abstract class org.example.Manage.Room {
- String bedSize
- int allowedPersons
+ {abstract}int getCost()
+ {abstract}ArrayList<String> getAmenities()
+ void setCost(int)
+ void setAllowedPerson(int)
+ int getAllowedPerson()
+ String getBedSize()
+ void setBedSize(String)
}


abstract class org.example.Manage.RoomDecorator {
}
class org.example.Manage.OutdoorSpace {
+ String getDescription()
+ ArrayList<String> getAmenities()
+ int getCost()
}

class org.example.Manage.House {
# CommonSpace indoorSpace
# CommonSpace outdoorSpace
+ ArrayList<String> getAmenities()
+ int getCost()
}


class org.example.Manage.AttachedBath {
~ Room room
+ ArrayList<String> getAmenities()
+ int getCost()
}


class org.example.Manage.LargeRoom {
+ int getCost()
+ ArrayList<String> getAmenities()
+ String getDescription()
}

class org.example.Manage.Garage {
+ ArrayList<String> getAmenities()
+ int getCost()
}

class org.example.Manage.Patio {
+ ArrayList<String> getAmenities()
+ int getCost()
}

class org.example.Manage.Area {
- String districtName
- ArrayList<Hotel> hotelLists
- ArrayList<Hotel> hotelListOfOneType
- HashMap<Integer,String> allhotelList
+ void addHotelID(int,String)
+ HashMap<Integer,String> getHotelIDList()
+ void addHotel(Hotel)
+ String getDistrictName()
+ ArrayList<Hotel> getHotelListOfOneType()
+ ArrayList<Hotel> getHotelOfOneType(String)
}


class org.example.Manage.Villa {
}
class org.example.Manage.Kitchen {
+ ArrayList<String> getAmenities()
+ int getCost()
}

class org.example.Manage.AFrames {
}
class org.example.Manage.SwimmingPool {
+ ArrayList<String> getAmenities()
+ int getCost()
}

abstract class org.example.Manage.Hotel {
+ {static} int lastHotelID
- int hotelID
- String ownerID
- String address
- String district
- String roomDetails
- String comSpaceDetails
- String specifications
- String additionalDescription
- String name
- HashMap<Client,CheckInandOut> bookings
- String type
- ArrayList<Room> rooms
- House house
- int costPerNight
- double sqft
+ ArrayList<String> getRoomDescription(int)
+ ArrayList<String> getOutdoorAmenities()
+ ArrayList<String> getIndoorAmenities()
+ void addBookings(Client,CheckInandOut)
+ void removeBooking(Client)
+ void addRoom(Room)
+ void calculateCostForRooms()
+ void calculateCostForOtherFacilities()
+ void writeRoomDetails()
+ void writeComSpaceDetails()
+ boolean vacantHotels(String,String)
}


class org.example.Manage.Yard {
+ ArrayList<String> getAmenities()
+ int getCost()
}

class org.example.Manage.Balcony {
~ Room room
+ ArrayList<String> getAmenities()
+ int getCost()
}


class org.example.Manage.Client {
- String name
+ void setName(String)
+ void setEmailAddress(String)
+ String getName()
+ String getEmailAddress()
}




org.example.Manage.CommonSpace <|.. org.example.Manage.IndoorSpace
org.example.Manage.Hotel <|-- org.example.Manage.Cottage
org.example.Manage.IndoorDecorator <|-- org.example.Manage.Dining
org.example.Manage.IndoorDecorator <|-- org.example.Manage.Lounge
org.example.Manage.Room <|-- org.example.Manage.DoubleRoom
org.example.Manage.Hotel <|-- org.example.Manage.Cabin
org.example.Manage.Room <|-- org.example.Manage.SingleRoom
org.example.Manage.CommonSpace <|.. org.example.Manage.OutdoorDecorator
org.example.Manage.CommonSpace <|.. org.example.Manage.IndoorDecorator
org.example.Manage.RoomDecorator <|-- org.example.Manage.AirConditioner
org.example.Manage.Room <|-- org.example.Manage.RoomDecorator
org.example.Manage.CommonSpace <|.. org.example.Manage.OutdoorSpace
org.example.Manage.CommonSpace <|.. org.example.Manage.House
org.example.Manage.RoomDecorator <|-- org.example.Manage.AttachedBath
org.example.Manage.Room <|-- org.example.Manage.LargeRoom
org.example.Manage.OutdoorDecorator <|-- org.example.Manage.Garage
org.example.Manage.OutdoorDecorator <|-- org.example.Manage.Patio
org.example.Manage.Hotel <|-- org.example.Manage.Villa
org.example.Manage.IndoorDecorator <|-- org.example.Manage.Kitchen
org.example.Manage.Hotel <|-- org.example.Manage.AFrames
org.example.Manage.OutdoorDecorator <|-- org.example.Manage.SwimmingPool
org.example.Manage.OutdoorDecorator <|-- org.example.Manage.Yard
org.example.Manage.RoomDecorator <|-- org.example.Manage.Balcony
@enduml